--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         canvas {
             position: absolute;
-            /* border: solid 2px orange; */
-            transition: all 10s ease-in-out;
+            border: solid 2px orange;
+            /* transition: all 10s ease-in-out; */
         }
     </style>
 </head>
