--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spooktober</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png"  href="/Img/fawIco.jpg">
     <script src="scriptjs_based_on_class.js">
     </script>
-    <!-- <script src="script.js"></script> -->
-
 </head>
 
 <body>
     <img class="spooky_img" src="./Img/spooky_sceleton.jpg">
-    <div class="time"></div>
+    <div class="time">00:00:00:00</div>
+
+    <div class="buttonContainer"></div>
     <div class="spookySlicer">
+        <img src="./Img/spooky_sceleton.jpg">
     </div>
 
 </body>
