--- a/index.html
+++ b/index.html
@@ -4,20 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spooktober</title>
+    <title>Cyber15</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png"  href="/Img/fawIco.jpg">
+    <link rel="icon" type="image/png" href="/Img/fawIco.jpg">
     <script src="scriptjs_based_on_class.js">
     </script>
 </head>
 
 <body>
-    <img class="spooky_img" src="./Img/spooky_sceleton.jpg">
-    <div class="time">00:00:00:00</div>
-
+    <img class="spooky_img" src="./Img/loadingScreen.gif">
+    <div class="time">
+        <img src="./digits/zeroIco.gif" alt="">
+        <img src="./digits/zeroIco.gif" alt="">
+        <img src="./digits/Ddots.gif" alt="">
+        <img src="./digits/zeroIco.gif" alt="">
+        <img src="./digits/zeroIco.gif" alt="">
+        <img src="./digits/Ddots.gif" alt="">
+        <img src="./digits/zeroIco.gif" alt="">
+        <img src="./digits/zeroIco.gif" alt="">
+        <!-- 2 kropek  -->
+        <img src="./digits/Ddots.gif" alt="">
+        <!-- 2 kropek -->
+        <img src="./digits/zeroIco.gif" alt="">
+        <img src="./digits/zeroIco.gif" alt="">
+        <img src="./digits/zeroIco.gif" alt="">
+    </div>
     <div class="buttonContainer"></div>
+    </div>
     <div class="spookySlicer">
-        <img src="./Img/spooky_sceleton.jpg">
+        <img src="./Img/loadingScreen.gif">
     </div>
 
 </body>
