--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img class="spooky_img" src="./Img/loadingScreen.gif">
+    <!-- <img class="spooky_img" src="./Img/loadingScreen.gif">
     <div class="time">
         <img src="./digits/zeroIco.gif" alt="">
         <img src="./digits/zeroIco.gif" alt="">
@@ -23,17 +23,17 @@
         <img src="./digits/zeroIco.gif" alt="">
         <img src="./digits/zeroIco.gif" alt="">
         <!-- 2 kropek  -->
-        <img src="./digits/Ddots.gif" alt="">
-        <!-- 2 kropek -->
-        <img src="./digits/zeroIco.gif" alt="">
-        <img src="./digits/zeroIco.gif" alt="">
-        <img src="./digits/zeroIco.gif" alt="">
+    <img src="./digits/Ddots.gif" alt="">
+    <!-- 2 kropek -->
+    <img src="./digits/zeroIco.gif" alt="">
+    <img src="./digits/zeroIco.gif" alt="">
+    <img src="./digits/zeroIco.gif" alt="">
     </div>
     <div class="buttonContainer"></div>
     </div>
     <div class="spookySlicer">
         <img src="./Img/loadingScreen.gif">
-    </div>
+    </div> -->
 
 </body>
 
