--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber15</title>
+    <title>15 puzzle</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="/Img/fawIco.jpg">
     <script src="scriptjs_based_on_class.js">
@@ -12,28 +12,6 @@
 </head>
 
 <body>
-    <!-- <img class="spooky_img" src="./Img/loadingScreen.gif">
-    <div class="time">
-        <img src="./digits/zeroIco.gif" alt="">
-        <img src="./digits/zeroIco.gif" alt="">
-        <img src="./digits/Ddots.gif" alt="">
-        <img src="./digits/zeroIco.gif" alt="">
-        <img src="./digits/zeroIco.gif" alt="">
-        <img src="./digits/Ddots.gif" alt="">
-        <img src="./digits/zeroIco.gif" alt="">
-        <img src="./digits/zeroIco.gif" alt="">
-        <!-- 2 kropek  -->
-    <img src="./digits/Ddots.gif" alt="">
-    <!-- 2 kropek -->
-    <img src="./digits/zeroIco.gif" alt="">
-    <img src="./digits/zeroIco.gif" alt="">
-    <img src="./digits/zeroIco.gif" alt="">
-    </div>
-    <div class="buttonContainer"></div>
-    </div>
-    <div class="spookySlicer">
-        <img src="./Img/loadingScreen.gif">
-    </div> -->
 
 </body>
 
