dodano pod serwer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>15 puzzle</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="/Img/fawIco.jpg">
-    <script src="scriptjs_based_on_class.js">
+    <script src="script.js">
     </script>
 </head>
 
